--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
 <style></style>
 <body>
    <main> 
-    <h1>bashbunni</h1>
-    <p>Welcome to my site, nerds.</p>
-
+    <img class="title-img" src="./bashbunni-title.png" alt="bashbunni" />
     <h2>Links</h2>
-    <a href="https://twitch.tv/bashbunni" alt="twitch">Twitch</a>
-    <a href="https://instagram.com/bashbunni" alt="instagram">Instagram</a>
-    <a href="https://twitter.com/bash_bunni" alt="twitter">Twitter</a>
-    <a href="https://youtube.com/c/bashbunni" alt="youtube">Youtube</a>
-
+    <a class="btn" href="https://twitch.tv/bashbunni" alt="twitch">
+        Twitch
+    </a>
+    <a class="btn" href="https://youtube.com/bashbunni" alt="youtube">
+        YouTube
+    </a>
+    <a class="btn" href="https://twitter.com/sudobunni" alt="twitter">
+        Twitter
+    </a>
+    <a class="btn" href="https://instagram.com/bashbunni" alt="instagram">
+        Instagram
+    </a>
     <h2>About</h2>
     <p>
 I'm a nerd who nukes code on stream.
@@ -30,7 +35,7 @@ But since chat is kinda nosey I'll letcha know that I do devrel at @charmcli.
 
 I use my twitch channel to learn new skills and banter with chat.
 
-I talk a lot about personal development, wellness, and fitness. I want to use this platform to help people get closer to their own goals by leading by example. I'm not perfect, I've got lots of things to learn and skills to develop, but I put myself out there and learn new things live in front of an audience so people can see the real process of building skills and not just the highlights.
+I want to use this platform to help people get closer to their own goals by leading by example. I'm not perfect, I've got lots of things to learn and skills to develop, but I put myself out there and learn new things live in front of an audience so people can see the real process of building skills and not just the highlights.
 
 My goal is to show that achieving your goals is doable but takes dedication and I hope to continue to inspire and motivate people with my content.
     </p>
