make desktop less uggo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <main> 
     <img class="title-img" src="./bashbunni-title.png" alt="bashbunni" />
     <h2>Links</h2>
+    <section class="links">
     <a class="btn" href="https://twitch.tv/bashbunni" alt="twitch">
         Twitch
     </a>
@@ -25,6 +26,7 @@
     <a class="btn" href="https://instagram.com/bashbunni" alt="instagram">
         Instagram
     </a>
+    </section>
     <h2>About</h2>
     <p>
 I'm a nerd who nukes code on stream.
