cli website refresh

--- a/index.html
+++ b/index.html
@@ -10,37 +10,50 @@
 </head>
 <style></style>
 <body>
-   <main> 
-    <img class="title-img" src="./bashbunni-title.png" alt="bashbunni" />
-    <h2>Links</h2>
-    <section class="links">
-    <a class="btn" href="https://twitch.tv/bashbunni" alt="twitch">
-        Twitch
-    </a>
-    <a class="btn" href="https://youtube.com/bashbunni" alt="youtube">
-        YouTube
-    </a>
-    <a class="btn" href="https://twitter.com/sudobunni" alt="twitter">
-        Twitter
-    </a>
-    <a class="btn" href="https://instagram.com/bashbunni" alt="instagram">
-        Instagram
-    </a>
-    </section>
-    <h2>About</h2>
+    <div class="typeme"><span class="text-secondary">bashbunni@bunnibrain </span><span class="text-background">~ </span><span class="cursor">$ </span>me -h</div>
+       <section class="output">
+    <ul class="links">
+    <li>
+        <a class="twitch" href="https://twitch.tv/bashbunni" alt="twitch">
+            Twitch
+        </a>
+    </li>
+    <li>
+        <a class="youtube" href="https://youtube.com/bashbunni" alt="youtube">
+            YouTube
+        </a>
+    </li>
+    <li>
+        <a class="twitter" href="https://twitter.com/sudobunni" alt="twitter">
+            Twitter
+        </a>
+    </li>
+    <li>
+        <a class="instagram" href="https://instagram.com/bashbunni" alt="instagram">
+            Instagram
+        </a>
+    </li>    
+    </ul>
     <p>
-I'm a nerd who nukes code on stream.
+I'm a software developer and content creator who builds mostly with Go. I do developer relations at <a class="charm" href="https://charm.sh" alt="charm website">@charmcli</a> which is top tier ~fabulous~. 
 
-I like golang
-
-But since chat is kinda nosey I'll letcha know that I do devrel at @charmcli.
-
-I use my twitch channel to learn new skills and banter with chat.
-
-I want to use this platform to help people get closer to their own goals by leading by example. I'm not perfect, I've got lots of things to learn and skills to develop, but I put myself out there and learn new things live in front of an audience so people can see the real process of building skills and not just the highlights.
+I hack on open source projects (my own, Charm's, and others) in public on my Twitch channel. I also have a YouTube channel where I post more curated content on what I'm learning. I love long form content because I resent how social media platforms can feel like a highlight reel of people's lives, when in reality, we all struggle, especially when coding (heh). </p>
+<p>
+My goal for my platforms is that I can help bring people closer to their goals by leading by example. I'm not perfect, I've got lots of things to learn and skills to develop, but I put myself out there anyway. I lean new things in front of an audience so people can see the *real* process of building skills and not just the highlights. 
 
 My goal is to show that achieving your goals is doable but takes dedication and I hope to continue to inspire and motivate people with my content.
-    </p>
-   </main>
+</p>
+
+    <ul aria-label="Interests">
+        <li>linux (hence, bashbunni)</li>
+        <li>terminals and terminal tools</li>
+        <li>backend development</li>
+        <li>cyber security</li>
+    </ul>
+
+    </section>
+<footer>
+    This site was styled with the <a href="https://github.com/catppuccin" alt="catppuccin github">Catppuccin theme</a>
+</footer>
 </body>
 </html>
