add interests as glow output

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@ My goal for my platforms is that I can help bring people closer to their goals b
 My goal is to show that achieving your goals is doable but takes dedication and I hope to continue to inspire and motivate people with my content.
 </p>
 
-    <ul aria-label="Interests">
+<div><span class="text-secondary">bashbunni@bunnibrain </span><span class="text-background">~ </span><span class="cursor">$ </span>glow interests.md</div>
+<h3>Interests</h3>
+    <ul>
         <li>linux (hence, bashbunni)</li>
         <li>terminals and terminal tools</li>
         <li>backend development</li>
