--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ I'm a software developer and content creator who builds mostly with Go. I do dev
 
 I hack on open source projects (my own, Charm's, and others) in public on my Twitch channel. I also have a YouTube channel where I post more curated content on what I'm learning. I love long form content because I resent how social media platforms can feel like a highlight reel of people's lives, when in reality, we all struggle, especially when coding (heh). </p>
 <p>
-My goal for my platforms is that I can help bring people closer to their goals by leading by example. I'm not perfect, I've got lots of things to learn and skills to develop, but I put myself out there anyway. I lean new things in front of an audience so people can see the *real* process of building skills and not just the highlights. 
+My goal for my platforms is that I can help bring people closer to their goals by leading by example. I'm not perfect, I've got lots of things to learn and skills to develop, but I put myself out there anyway. I learn new things in front of an audience so people can see the *real* process of building skills and not just the highlights. 
 
 My goal is to show that achieving your goals is doable but takes dedication and I hope to continue to inspire and motivate people with my content.
 </p>
