include github link

--- a/index.html
+++ b/index.html
@@ -29,10 +29,16 @@
         </a>
     </li>
     <li>
+        <a class="github" href="https://github.com/bashbunni" alt="github">
+            Github
+        </a>
+    </li>    
+    <li>
         <a class="instagram" href="https://instagram.com/bashbunni" alt="instagram">
             Instagram
         </a>
     </li>    
+
     </ul>
     <p>
 I'm a software developer and content creator who builds mostly with Go. I do developer relations at <a class="charm" href="https://charm.sh" alt="charm website">@charmcli</a> which is top tier ~fabulous~. 
