add target blank for links

--- a/index.html
+++ b/index.html
@@ -14,34 +14,34 @@
        <section class="output">
     <ul class="links">
     <li>
-        <a class="twitch" href="https://twitch.tv/bashbunni" alt="twitch">
+        <a class="twitch" href="https://twitch.tv/bashbunni" alt="twitch" target="_blank">
             Twitch
         </a>
     </li>
     <li>
-        <a class="youtube" href="https://youtube.com/bashbunni" alt="youtube">
+        <a class="youtube" href="https://youtube.com/bashbunni" alt="youtube" target="_blank">
             YouTube
         </a>
     </li>
     <li>
-        <a class="twitter" href="https://twitter.com/sudobunni" alt="twitter">
+        <a class="twitter" href="https://twitter.com/sudobunni" alt="twitter" target="_blank">
             Twitter
         </a>
     </li>
     <li>
-        <a class="github" href="https://github.com/bashbunni" alt="github">
+        <a class="github" href="https://github.com/bashbunni" alt="github" target="_blank">
             Github
         </a>
     </li>    
     <li>
-        <a class="instagram" href="https://instagram.com/bashbunni" alt="instagram">
+        <a class="instagram" href="https://instagram.com/bashbunni" alt="instagram" target="_blank">
             Instagram
         </a>
     </li>    
 
     </ul>
     <p>
-I'm a software developer and content creator who builds mostly with Go. I do developer relations at <a class="charm" href="https://charm.sh" alt="charm website">@charmcli</a> which is top tier ~fabulous~. 
+I'm a software developer and content creator who builds mostly with Go. I do developer relations at <a class="charm" href="https://charm.sh" alt="charm website" target="_blank">@charmcli</a> which is top tier ~fabulous~. 
 
 I hack on open source projects (my own, Charm's, and others) in public on my Twitch channel. I also have a YouTube channel where I post more curated content on what I'm learning. I love long form content because I resent how social media platforms can feel like a highlight reel of people's lives, when in reality, we all struggle, especially when coding (heh). </p>
 <p>
@@ -61,7 +61,7 @@ My goal is to show that achieving your goals is doable but takes dedication and 
 
     </section>
 <footer>
-    This site was styled with the <a href="https://github.com/catppuccin" alt="catppuccin github">Catppuccin theme</a>
+    This site was styled with the <a href="https://github.com/catppuccin" alt="catppuccin github" target="_blank">Catppuccin theme</a>
 </footer>
 </body>
 </html>
