--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </li>
     <li>
         <a class="github" href="https://github.com/bashbunni" alt="github" target="_blank">
-            Github
+            GitHub
         </a>
     </li>    
     <li>
