feat: add official channels section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@ My goal is to show that achieving your goals is doable but takes dedication and 
         <li>cyber security</li>
     </ul>
 
+<div><span class="text-secondary">bashbunni@bunnibrain </span><span class="text-background">~ </span><span class="cursor">$ </span>contact</div>
+<h3>Official bashbunni channels</h3>
+    <ul>
+        <li>Discord: bashbunni; no special characters or numbers, nothin'</li>
+        <li>Email: hello@bashbunni.dev</li>
+        <li>And the stuff linked above.</li>
+    </ul>
     </section>
 <footer>
     This site was styled with the <a href="https://github.com/catppuccin" alt="catppuccin github" target="_blank">Catppuccin theme</a>
